upd readme & add github link in page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 			    }
 			});
 		</script>
+		<br>
+		<br>
+		<a href="https://github.com/111116/webaudiotest">Github</a>
     </body>
 </html>
 
