--- a/index.html
+++ b/index.html
@@ -2,76 +2,41 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>mp3 decode test</title>
+        <title>custom mp3 decoder</title>
     </head>
     <body>
-		<div>
-			This will play an mp3 containing 9 click sounds once, and a wav containing a higher-pitched click sound several times. They start at the same time.
-			</br>
-			set appropriate volume before listening.
-		</div>
-		<input type="button" id="button" value="start">
-		<br>
-		<!--wav extra delay (ms)-->
-		<input type="number" id="number" value="0" min="0" max="100" hidden>
-		<br>
-		<br>
-		<a href="https://github.com/111116/webaudiotest">Github</a>
+    	length of decoded buffer differs among browsers.<br>
+    	Buffer length: <span id="len"></span>
+    	<br>
+    	User Agent: <span id="ver"></span>
 		<script type="text/javascript">
+			document.getElementById("ver").innerText = navigator.userAgent;
 			var audio = new AudioContext();
 			var gain = audio.createGain();
 			gain.connect(audio.destination);
 			
 			// fetch resource and decode
-			function createMusic(url) {
-			    var a = {buffer: null};
+			function mp3init(url) {
 			    let xhr = new XMLHttpRequest();
 			    xhr.open("GET", url);
 			    xhr.responseType = 'blob';
 			    xhr.onload = function() {
+			    	console.log('get blob', xhr.response);
 			        let reader = new FileReader();
 			        reader.onload = function(e) {
+			        	console.log('reader result', e.target.result);
 			            audio.decodeAudioData(e.target.result, function(decoded) {
-			                a.buffer = decoded;
-			                console.log("Audio decoded");
+			                let buffer = decoded;
+			                console.log("Audio decoded", buffer);
+			                document.getElementById("len").innerText = buffer.length.toString();
 			            });
 			        };
 			        reader.readAsArrayBuffer(xhr.response);
 			    }
 			    xhr.send();
-			    return a;
 			}
-			
-			var a1 = createMusic("1.mp3");
-			var a2 = createMusic("sig.wav");
-			
-			// start a music at given time
-			function start(a, t) {
-			    var source = audio.createBufferSource();
-			    source.connect(gain);
-			    source.buffer = a.buffer;
-			    source.start(t,0);
-			}
-			
-			var t0 = 0;
-			function play() {
-			    let t = audio.currentTime;
-			    start(a1, t + 0);
-			    start(a2, t + t0 + 0);
-			    start(a2, t + t0 + 0.8);
-			    start(a2, t + t0 + 1.6);
-			    start(a2, t + t0 + 2.4);
-			    start(a2, t + t0 + 3.2);
-			}
-			
-			window.addEventListener('DOMContentLoaded', function() {
-			    document.getElementById("button").onclick = function() {
-			        play();
-			    }
-			    document.getElementById("number").onchange = function() {
-			    	t0 = +document.getElementById("number").value / 1000;
-			    }
-			});
+
+			mp3init('./1.mp3');
 		</script>
     </body>
 </html>
